# pools

Integral/: CMakeLists.txt  integral.c  integral.h  mpi.c  sequential.c
IntegralCxx/: CMakeLists.txt  analysis.py  analysis.txt  init.py  mpi.cpp  sequential.cpp
IntegralCxx/include/: function.hh  integral.hh
IntegralCxx/src/: function.cpp  integral.cpp
IntegralFortran/: analysis.py  ex3b.f  ex3d.f  init.py
L11_Matrix/: a.out  analysis.py  init.py  main.cpp  time
L11_Pi/: exmy.c
Simple programs/: CMakeLists.txt  test1.c  test1.f  test1.f90  useable.c
octave/: int.m
